# cpp_api_react_calculator

./: .gitignore  README.md
calculator_back-end/: CMakeLists.txt
calculator_back-end/include/: IResourceFactory.h
calculator_front-end/public/: index.html
calculator_front-end/src/: App.css  App.js  CalculatorApi.js  CalculatorButton.js  CalculatorDisplay.js  CalculatorPanel.js  index.css
